build: Switch to using commitizen and activate in pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -67,3 +67,8 @@ repos:
     hooks:
       - id: check-github-workflows
       - id: check-dependabot
+
+  - repo: https://github.com/commitizen-tools/commitizen
+    rev: v2.35.0
+    hooks:
+      - id: commitizen
