--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,30 +1,41 @@
 default_language_version:
   python: python3
 
+files: |
+  (?x)^(
+    byop|
+    tests
+  )/.*\.py$
+
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.3.0
+    rev: v4.4.0
     hooks:
-      - id: check-yaml
       - id: check-added-large-files
+        files: ".*"
       - id: check-case-conflict
+        files: ".*"
       - id: check-merge-conflict
-      - id: check-toml
-      - id: debug-statements
+        files: ".*"
+      - id: check-yaml
+        files: ".*"
       - id: end-of-file-fixer
+        files: ".*"
+        types: ["yaml"]
+      - id: check-toml
+        files: ".*"
+        types: ["toml"]
+      - id: debug-statements
+        files: '^byop/.*\.py$'
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.982
+    rev: v0.991
     hooks:
       - id: mypy
-        args: ["--config-file=pyproject.toml", "--ignore-missing-imports"]
-        exclude: "^tests"
-
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v3.1.0
-    hooks:
-      - id: pyupgrade
-        args: ['--py38-plus']
+        args: [
+          "--config-file=pyproject.toml",
+          "--ignore-missing-imports",
+        ]
 
   - repo: https://github.com/psf/black
     rev: 22.10.0
@@ -32,49 +43,34 @@ repos:
       - id: black
         args: ["--config=pyproject.toml"]
 
-  - repo: https://github.com/PyCQA/pydocstyle
-    rev: 6.1.1
-    hooks:
-      - id: pydocstyle
-        args: ["--config=pyproject.toml"]
-
-  - repo: local
-    hooks:
-      - id: pylint
-        name: pylint
-        entry: pylint
-        language: system
-        types: [python]
-        require_serial: true
-        args: ["-rn", "-sn", "--rcfile=pyproject.toml"]
-        exclude: "^tests"
-
-  - repo: https://github.com/PyCQA/isort
-    rev: 5.10.1
-    hooks:
-      - id: isort
-        args: ["-settings-path=pyproject.toml"]
-
   - repo: https://github.com/hadialqattan/pycln
-    rev: v2.1.1
+    rev: v2.1.2
     hooks:
       - id: pycln
         name: Remove unused imports
-        args: ["--config=pyproject.toml", "--all"]
+        args: ["--config=pyproject.toml"]
 
   - repo: https://github.com/python-jsonschema/check-jsonschema
-    rev: 0.18.3
+    rev: 0.19.2
     hooks:
       - id: check-github-workflows
+        files: '^github/workflows/.*\.ya?ml$'
+        types: ["yaml"]
       - id: check-dependabot
+        files: '^\.github/dependabot\.ya?ml$'
 
   - repo: https://github.com/commitizen-tools/commitizen
-    rev: v2.35.0
+    rev: v2.37.1
     hooks:
       - id: commitizen
 
   - repo: https://github.com/dosisod/refurb
-    rev: v1.7.0
+    rev: v1.8.0
     hooks:
       - id: refurb
         language_version: python3.10
+
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: v0.0.152
+    hooks:
+      - id: ruff
