--- a/pyproject.toml
+++ b/pyproject.toml
@@ -90,24 +90,22 @@ dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
 select = ["E", "F", "Q", "W", "I", "D", "U", "N", "S", "C", "B", "A", "T", "YTT", "RUF", "M"]
 ignore = [
-    "D105",  # Missing docstring in magic mthod
-    "D400",  # Fist line should end with a period
-    "D406", # Section name should end with a newline
-    "D407", # Missing dashed underline after section
-    # Documentation - Numpy style
-    "D107",
-    "D203",
-    "D212",
+    # Documentation - Google style
+    "D204",
     "D213",
-    "D402",
+    "D215",
+    "D400",
+    "D404",
+    "D406",
+    "D407",
+    "D408",
+    "D409",
     "D413",
-    "D415",
-    "D416",
-    "D417",
     #
+    "D105",  # Missing docstring in magic mthod
+    "D203", # 1 blank line required before class docstring
     "N806", # Variable X in function should be lowercase
     "E731", # Do not assign a lambda expression, use a def
-    #
     "A003", # Shadowing a builtin
     "S101", # Use of assert detected.
 ]
