--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,12 +1,10 @@
 default_language_version:
   python: python3
-
 files: |
   (?x)^(
     byop|
     tests
   )/.*\.py$
-
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
@@ -27,29 +25,22 @@ repos:
         types: ["toml"]
       - id: debug-statements
         files: '^byop/.*\.py$'
-
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.991
     hooks:
       - id: mypy
-        args: [
-          "--config-file=pyproject.toml",
-          "--ignore-missing-imports",
-        ]
-
+        args: ["--config-file=pyproject.toml", "--ignore-missing-imports"]
   - repo: https://github.com/psf/black
     rev: 22.10.0
     hooks:
       - id: black
         args: ["--config=pyproject.toml"]
-
   - repo: https://github.com/hadialqattan/pycln
     rev: v2.1.2
     hooks:
       - id: pycln
         name: Remove unused imports
         args: ["--config=pyproject.toml"]
-
   - repo: https://github.com/python-jsonschema/check-jsonschema
     rev: 0.19.2
     hooks:
@@ -58,18 +49,10 @@ repos:
         types: ["yaml"]
       - id: check-dependabot
         files: '^\.github/dependabot\.ya?ml$'
-
   - repo: https://github.com/commitizen-tools/commitizen
     rev: v2.37.1
     hooks:
       - id: commitizen
-
-  - repo: https://github.com/dosisod/refurb
-    rev: v1.8.0
-    hooks:
-      - id: refurb
-        language_version: python3.10
-
   - repo: https://github.com/charliermarsh/ruff-pre-commit
     rev: v0.0.152
     hooks:
