refactor(typing): Reduce typing on Steps
Typing with the individual steps is hard as we erase types to base class `Step` to accomodate
all types for the flow, but we lose information on absolute types. This is relatively impossible
anyways for all the complex operations. The question is the "same as what is the type of `["a", 1, None]`"?
To solve this type erasure, the Pipeline methods will return Union types over all possible step types.
This doesnt solve the issue but at least narrows it down for the user.. i.e. `list[str | int | None]`

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,9 +29,10 @@ repos:
     rev: v0.991
     hooks:
       - id: mypy
-        args: ["--config-file=pyproject.toml", "--ignore-missing-imports"]
+        additional_dependencies:
+          - "attrs"
   - repo: https://github.com/psf/black
-    rev: 22.10.0
+    rev: 22.12.0
     hooks:
       - id: black
         args: ["--config=pyproject.toml"]
@@ -54,6 +55,6 @@ repos:
     hooks:
       - id: commitizen
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.0.152
+    rev: v0.0.174
     hooks:
       - id: ruff
