--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@ default_language_version:
   python: python3
 files: |
   (?x)^(
-    byop|
+    src|
     tests
   )/.*\.py$
 repos:
@@ -24,7 +24,7 @@ repos:
         files: ".*"
         types: ["toml"]
       - id: debug-statements
-        files: '^byop/.*\.py$'
+        files: '^src/.*\.py$'
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.991
     hooks:
