--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dev = [
   "pre-commit",
   "commitizen",
   "pycln",
+  "black",
   "ruff",
   "mypy",
   "mkdocs",
@@ -76,7 +77,7 @@ name = "cz_conventional_commits"
 version = "0.0.3"
 tag_format = "v$major.$minor.$patch$prerelease"
 update_changelog_on_bump = true
-version_files = ["pyproject.toml:version", "byop/__version__.py"]
+version_files = ["pyproject.toml:version", "src/byop/__version__.py"]
 
 [tool.black]
 target-version = ['py38']
@@ -85,7 +86,7 @@ target-version = ['py38']
 [tool.ruff]
 target-version = "py38"
 line-length = 88
-src = ["byop", "tests"]
+src = ["src", "tests"]
 
 # Allow unused variables when underscore-prefixed.
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
@@ -97,7 +98,7 @@ select = [
   "W",
   "I",
   "D",
-  "U",
+  "UP",
   "N",
   "S",
   "C",
@@ -106,7 +107,7 @@ select = [
   "T",
   "YTT",
   "RUF",
-  "M",
+  "RUF100",
 ]
 ignore = [
   # Documentation - Google style
