--- a/pyproject.toml
+++ b/pyproject.toml
@@ -123,6 +123,7 @@ ignore = [
   "D409",
   "D413",
   #
+  "D104", # Missing docstring in public package
   "D105", # Missing docstring in magic mthod
   "D203", # 1 blank line required before class docstring
   "N806", # Variable X in function should be lowercase
