--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,7 @@
 [project]
 name = "byop"
 version = "0.0.3"
-dependencies = [
-  "typing_extensions",
-  "more_itertools",
-  "matplotlib",
-  "networkx",
-  "pygraphviz",
-  "result",
-]
+dependencies = ["typing_extensions", "more_itertools", "matplotlib", "result"]
 requires-python = ">=3.8"
 authors = [{ name = "Eddie Bergman", email = "eddiebergmanhs@gmail.com" }]
 readme = "README.md"
@@ -87,52 +80,62 @@ target-version = ['py38']
 [tool.ruff]
 target-version = "py38"
 line-length = 88
+show-source = true
 src = ["src", "tests"]
 
 # Allow unused variables when underscore-prefixed.
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
 select = [
+  "A",
+  "ARG",
+  "B",
+  "BLE",
+  "C",
+  "C4",
+  "D",
+  "DTZ",
   "E",
   "F",
-  "Q",
-  "W",
+  "FBT",
   "I",
-  "D",
+  "INP",
+  "N",
+  "PD",
+  "PLC",
+  "PLE",
+  "PLR",
+  "PLW",
+  "PIE",
+  "PT",
+  "Q",
+  "PGH004", # Use specific rule codes when using noqa
+  "RET",
+  "RUF",
+  "C90",
+  "S",
+  "SIM",
+  "T",
+  # "TRY",
+  "T10",
   "UP",
   "N",
-  "S",
-  "C",
-  "B",
-  "A",
-  "T",
+  "W",
   "YTT",
-  "RUF",
-  "RUF100",
 ]
+
 ignore = [
-  # Documentation - Google style
-  "D204",
-  "D213",
-  "D215",
-  "D400",
-  "D404",
-  "D406",
-  "D407",
-  "D408",
-  "D409",
-  "D413",
-  #
   "D104", # Missing docstring in public package
   "D105", # Missing docstring in magic mthod
   "D203", # 1 blank line required before class docstring
+  "D401", # First line of docstring should be in imperative mood
   "N806", # Variable X in function should be lowercase
   "E731", # Do not assign a lambda expression, use a def
   "A003", # Shadowing a builtin
   "S101", # Use of assert detected.
+  "W292", # No newline at end of file
 ]
 
-# Exclude a variety of commonly ignored directories.
 exclude = [
   ".bzr",
   ".direnv",
@@ -154,16 +157,22 @@ exclude = [
   "node_modules",
   "venv",
 ]
-per-file-ignores = { "tests/*.py" = [
-  "S101",
-  "D103",
-  "ANN001",
-  "ANN201",
-  "D100",
-] }
+
+# Exclude a variety of commonly ignored directories.
+[tool.ruff.per-file-ignores]
+"tests/*.py" = [ "S101", "D103", "ANN001", "ANN201", "D100" ]
+"src/byop/__version__.py" = ["D100"]
+"__init__.py" = ["I002"]
+
 
 [tool.ruff.isort]
-known-first-party = ["byop"] # Say that byop is FIRSTPARTY
+known-first-party = ["byop"]
+no-lines-before = ["future"]
+required-imports = ["from __future__ import annotations"]
+force-sort-within-sections = true
+
+[tool.ruff.pydocstyle]
+convention = "google"
 
 
 [tool.mypy]
