--- a/pyproject.toml
+++ b/pyproject.toml
@@ -160,7 +160,7 @@ exclude = [
 
 # Exclude a variety of commonly ignored directories.
 [tool.ruff.per-file-ignores]
-"tests/*.py" = [ "S101", "D103", "ANN001", "ANN201", "D100" ]
+"tests/*.py" = [ "S101", "D103", "ANN001", "ANN201", "D100", "I002"]
 "src/byop/__version__.py" = ["D100"]
 "__init__.py" = ["I002"]
 
