--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ license = { file = "LICENSE" }
 dev = [
   "pytest",
   "pytest-coverage",
+  "distributed",
   "pytest-cases",
   "scikit-learn",
   "pandas",
@@ -160,7 +161,15 @@ exclude = [
 
 # Exclude a variety of commonly ignored directories.
 [tool.ruff.per-file-ignores]
-"tests/*.py" = [ "S101", "D103", "ANN001", "ANN201", "D100", "I002"]
+"tests/*.py" = [
+    "S101",
+    "D103",
+    "ANN001",
+    "ANN201",
+    "D100",
+    "I002",
+    "PLR2004"
+]
 "src/byop/__version__.py" = ["D100"]
 "__init__.py" = ["I002"]
 
