--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "byop"
-version = "0.0.3"
+version = "0.1.0"
 dependencies = ["typing_extensions", "more_itertools", "matplotlib", "result"]
 requires-python = ">=3.8"
 authors = [{ name = "Eddie Bergman", email = "eddiebergmanhs@gmail.com" }]
@@ -22,6 +22,7 @@ license = { file = "LICENSE" }
 
 [project.optional-dependencies]
 dev = [
+  "commitizen",
   "pytest",
   "pytest-coverage",
   "distributed",
@@ -69,7 +70,7 @@ exclude_lines = [
 
 [tool.commitizen]
 name = "cz_conventional_commits"
-version = "0.0.3"
+version = "0.1.0"
 tag_format = "v$major.$minor.$patch$prerelease"
 update_changelog_on_bump = true
 version_files = ["pyproject.toml:version", "src/byop/__version__.py"]
