ci: Try out `mike` for documentaiton versioning
Currently there's no built in feature for `mkdocs` but `mike`
builds on top of it so worth giving a go in the future!

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,6 +46,11 @@ markdown_extensions:
 plugins:
   - search
   - autorefs
+  - mike:
+      version_selector: true
+      css_dir: css
+      javascript_dir: js
+      canonical_version: main
   - mkdocstrings:
       default_handler: python
       handlers:
