--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,11 +26,12 @@ repos:
       - id: debug-statements
         files: '^src/.*\.py$'
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.0.0
+    rev: v1.0.1
     hooks:
       - id: mypy
         additional_dependencies:
           - "attrs"
+          - "strenum"
   - repo: https://github.com/psf/black
     rev: 23.1.0
     hooks:
@@ -49,7 +50,7 @@ repos:
     hooks:
       - id: commitizen
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.0.245
+    rev: v0.0.249
     hooks:
       - id: ruff
         args: ["--fix"]
