--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ dependencies = [
   "typing_extensions",  # Better typing
   "more_itertools",  # Better iteration
   "result",  # Could be removed, used for parsing, building, configuring
-  "psutil"  # Used for process termination of executors
+  "psutil",  # Used for process termination of executors
 ]
 requires-python = ">=3.8"
 authors = [{ name = "Eddie Bergman", email = "eddiebergmanhs@gmail.com" }]
@@ -41,6 +41,7 @@ dev = [
   "ruff",
   "mypy",
   "types-psutil",
+  "types-pyyaml",
 ]
 doc = [
   "mkdocs",
@@ -60,9 +61,6 @@ source = "https://github.com/automl/byop/"
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 minversion = "3.8"
-
-[tool.pycln]
-all = true
 
 [tool.coverage.run]
 branch = true
@@ -227,8 +225,6 @@ module = [
   "pygraphviz.*",
   "pandas.*",
   "more_itertools.*",
+  "strenum",
 ]
 ignore_missing_imports = true
-
-[tool.refurb]
-python-version = "3.8"
