--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ dependencies = [
   "more_itertools",  # Better iteration
   "result",  # Could be removed, used for parsing, building, configuring
   "psutil",  # Used for process termination of executors
+  "pandas",
+  "numpy",
 ]
 requires-python = ">=3.8"
 authors = [{ name = "Eddie Bergman", email = "eddiebergmanhs@gmail.com" }]
@@ -28,13 +30,6 @@ license = { file = "LICENSE" }
 [project.optional-dependencies]
 dev = [
   "commitizen",
-  "pytest",
-  "pytest-coverage",
-  "distributed",
-  "pytest-cases",
-  "scikit-learn",
-  "pandas",
-  "numpy",
   "pre-commit",
   "commitizen",
   "black",
@@ -42,6 +37,15 @@ dev = [
   "mypy",
   "types-psutil",
   "types-pyyaml",
+]
+test = [
+  "pytest",
+  "pytest-coverage",
+  "pytest-cases",
+  "distributed",
+  "scikit-learn",
+  "openpyxl",
+  "pyarrow",
 ]
 doc = [
   "mkdocs",
@@ -52,7 +56,10 @@ doc = [
   "pillow",
   "cairosvg",
 ]
-smac = ["smac==2.0.0b1", "configspace"]
+smac = [
+  "smac==2.0.0b1",
+  "configspace",
+]
 
 [project.urls]
 documentation = "https://github.com/automl/byop/"
@@ -138,6 +145,7 @@ ignore = [
   "D104", # Missing docstring in public package
   "D105", # Missing docstring in magic mthod
   "D203", # 1 blank line required before class docstring
+  "D205", # 1 blank line between summary and description
   "D401", # First line of docstring should be in imperative mood
   "N806", # Variable X in function should be lowercase
   "E731", # Do not assign a lambda expression, use a def
@@ -178,7 +186,8 @@ exclude = [
     "ANN201",
     "D100",
     "I002",
-    "PLR2004"
+    "PLR2004",
+    "PD901",  #  X is a bad variable name. (pandas)
 ]
 "src/byop/__version__.py" = ["D100"]
 "__init__.py" = ["I002"]
