ci: Fix doc installation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,8 @@ doc = [
   "mkdocs",
   "mkdocs-material",
   "mkdocs-autorefs",
+  "mkdocs-gen-files",
+  "mkdocs-literate-nav",
   "mkdocstrings[python]",
   "mike",
   "pillow",
