feat: Task overhaul

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,9 +67,16 @@ smac = [
 documentation = "https://github.com/automl/byop/"
 source = "https://github.com/automl/byop/"
 
+# https://docs.pytest.org/en/7.2.x/reference/reference.html#ini-options-ref
 [tool.pytest.ini_options]
 testpaths = ["tests"]
-minversion = "3.8"
+minversion = "7.0"
+empty_parameter_set_mark = "xfail"
+log_cli = false
+log_level = "DEBUG"
+xfail_strict = true
+addopts = "--durations=10 -vv"
+
 
 [tool.coverage.run]
 branch = true
@@ -237,3 +244,4 @@ module = [
   "more_itertools.*",
 ]
 ignore_missing_imports = true
+
